styles/global.css
@font-face {
  font-family: "Founders Grotesk";
  /* we bought a license, this is the test version though because it's only 10kb
   * and the licensed one is 34kb! There are some missing special characters, so
   * be careful, if you need the full font, let one of the founders know you need
   * the ... ~founders~ font. DO YOU GET IT?!
   */
  src: url("/font/founders-grotesk-bold.woff2") format("woff2");
  font-style: normal;
}

html,
body,
.__r_e_m_i_x {
  overflow-x: hidden;
  position: relative;
}

details summary {
  cursor: pointer;
}

.form-dot:checked,
.form-check:checked {
  border-color: transparent;
  background-color: currentColor;
  background-size: 100% 100%;
  background-position: center;
  background-repeat: no-repeat;
}

.form-check:checked {
  background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='var(--base07)' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M5.707 7.293a1 1 0 0 0-1.414 1.414l2 2a1 1 0 0 0 1.414 0l4-4a1 1 0 0 0-1.414-1.414L7 8.586 5.707 7.293z'/%3e%3c/svg%3e");
}

.form-dot:checked {
  background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='var(--base07)' xmlns='http://www.w3.org/2000/svg'%3e%3ccircle cx='8' cy='8' r='4'/%3e%3c/svg%3e");
}

.select {
  background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 32 24' fill='var(--base07)' width='32' height='24' xmlns='http://www.w3.org/2000/svg'%3e%3cpolygon points='0,0 32,0 16,24'/%3e%3c/svg%3e");
  background-origin: content-box;
  background-position: right -1rem center;
  background-repeat: no-repeat;
  background-size: 9px 6px;
  color: var(--base07);
  background-color: var(--base00);
}

@keyframes anim-flicker {
  0%,
  19%,
  22%,
  62.999%,
  64%,
  64.999%,
  70%,
  100% {
    opacity: 0.99;
    text-shadow: var(--text-shadow);
    color: var(--anim-color);
  }
  20%,
  21.999%,
  63%,
  63.999%,
  65%,
  69.999% {
    opacity: 0.4;
    text-shadow: none;
  }
}

.remix-text-glow {
  /* --text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff,
    1px 1px 0 #fff, 0 -2px 8px, 0 0 2px, 0 0 5px currentColor,
    0 0 15px currentColor, 0 0 2px currentColor, 0 2px 3px var(--hue-0000); */
  --text-shadow: 0 0 4px currentColor;
  text-shadow: var(--text-shadow);
  line-height: 1;
  letter-spacing: 0.05em;
}

.remix-text-flicker {
  color: var(--hue-0200) !important;
  text-shadow: none !important;
  position: relative;

  &::before {
    content: attr(data-content);
    font: inherit;
    line-height: inherit;
    position: absolute;
    color: attr(data-color);
    width: 100%;
    z-index: 5;
    text-shadow: none;
    left: 0;
    text-align: left;
    animation: anim-flicker 3s linear infinite;
  }
}

.remix-caught-status {
  font-size: 3.5rem;

  @media screen and (min-width: 220px) {
    font-size: 5.5rem;
  }

  @media screen and (min-width: 270px) {
    font-size: 6.5rem;
  }

  @media screen and (min-width: 280px) {
    font-size: 7rem;
  }

  @media screen and (min-width: 320px) {
    font-size: 8rem;
  }
}

